<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lost_And_found</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="find">发现</string>
    <string name="lost">丢失</string>
    <string name="foundback">招领</string>
    <string name="mine">我的</string>
    <string name="PhoneNumber">手机号码</string>
    <string name="identity_code">验证码</string>
    <string name="sigining">登录</string>
    <string name="input_identify_code">输入验证码</string>
    <string name="picture">头像</string>
    <string name="nickname">昵称</string>
    <string name="connection">联系方式</string>
    <string name="address">地址</string>
    <string name="sex">性别</string>
    <string name="privateinformation">个人信息</string>
      <string name="description">物品描述</string>
    <string name="brief_state_lost_info">简要说明丢失的信息</string>
    <string name="lost_time">丢失时间</string>
    <string name="lost_address">丢失地点</string>
    <string name="lost_name">姓名</string>
    <string name="lost_phone">手机</string>
    <string name="lost_qq">Q Q</string>
    <string name="commit">提交</string>

</resources>
