<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout 
    android:layout_marginTop="10dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
     >
    <TextView
        android:id="@+id/lost_time"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"       
        android:text="@string/lost_time"
        android:gravity="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_lost_time"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/write_edit"
        android:ems="10" />

    </LinearLayout>
   <LinearLayout 
    android:layout_marginTop="5dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
     >
    <TextView
        android:id="@+id/lost_place"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"       
        android:text="@string/lost_address"
        android:gravity="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_lost_place"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="30dp"
        android:background="@drawable/write_edit"        
        android:ems="10"
         />

    </LinearLayout>
     <LinearLayout 
    android:layout_marginTop="5dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
     >
    <TextView
        android:id="@+id/lost_description"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"       
        android:text="@string/description"
        android:gravity="center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="80dp"
        android:background="@drawable/write_edit"        
        android:hint="@string/brief_state_lost_info"
        android:maxLength="150" />

    </LinearLayout>
     <LinearLayout 
    android:layout_marginTop="5dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
     >
    <TextView
        android:id="@+id/lost_name"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"       
        android:text="@string/lost_name"
        android:gravity="left|center"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_lost_name"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="30dp"
        android:background="@drawable/write_edit"        
        android:ems="10"
        />

    </LinearLayout>
      <LinearLayout 
    android:layout_marginTop="5dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
     >
    <TextView
        android:id="@+id/lost_phonenum"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"       
        android:text="@string/lost_phone"
        android:gravity="left|center"
        
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_lost_phonenum"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="30dp"
        android:background="@drawable/write_edit"        
        android:ems="10"
         />

    </LinearLayout>

       <LinearLayout
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="5dp"
           android:orientation="horizontal" >

    <TextView
        android:id="@+id/lost_QQ"
        android:layout_marginLeft="43dp"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"       
        android:text="@string/lost_qq"
        android:gravity="left|center"
        
        android:textSize="22sp" />

    <EditText
        android:id="@+id/et_lost_QQ"
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_height="32dp"
        android:background="@drawable/write_edit"        
        android:ems="10"
         />

    </LinearLayout>
<LinearLayout 
    android:layout_marginTop="20dp"
    android:layout_marginRight="120dp"
    android:layout_marginLeft="120dp"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
       <Button
           android:id="@+id/commit"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:text="@string/commit"
           android:background="#00ff00"
           android:textSize="15sp" />
</LinearLayout>

</LinearLayout>
